better build command

--- a/docs/components/search.html
+++ b/docs/components/search.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
   <title>Search & Filters - NFB Balmoral</title>
-  <link rel="stylesheet" href="http://localhost:4000/assets/css/just-the-docs.css">
+  <link rel="stylesheet" href="https://nfb-onf.github.io/balmoral-style/assets/css/just-the-docs.css">
   
-  <script type="text/javascript" src="http://localhost:4000/assets/js/vendor/lunr.min.js"></script>
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/vendor/lunr.min.js"></script>
   
-  <script type="text/javascript" src="http://localhost:4000/assets/js/just-the-docs.js"></script>
+  <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/just-the-docs.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -18,7 +18,7 @@
 
   <div class="page-wrap">
     <div class="side-bar">
-      <a href="http://localhost:4000" class="site-title fs-6 lh-tight">NFB Balmoral</a>
+      <a href="https://nfb-onf.github.io/balmoral-style" class="site-title fs-6 lh-tight">NFB Balmoral</a>
       <span class="fs-3"><button class="js-main-nav-trigger navigation-list-toggle btn btn-outline" type="button" data-text-toggle="Hide">Menu</button></span>
       <div class="navigation main-nav js-main-nav">
         <nav>
@@ -29,7 +29,7 @@
         
           <li class="navigation-list-item active">
             
-            <a href="http://localhost:4000/" class="navigation-list-link"></a>
+            <a href="https://nfb-onf.github.io/balmoral-style/" class="navigation-list-link"></a>
             
           </li>
         
@@ -39,7 +39,7 @@
         
           <li class="navigation-list-item active">
             
-            <a href="http://localhost:4000/404.html" class="navigation-list-link"></a>
+            <a href="https://nfb-onf.github.io/balmoral-style/404.html" class="navigation-list-link"></a>
             
           </li>
         
@@ -53,7 +53,7 @@
         
           <li class="navigation-list-item">
             
-            <a href="http://localhost:4000/docs/basics" class="navigation-list-link">Basics</a>
+            <a href="https://nfb-onf.github.io/balmoral-style/docs/basics" class="navigation-list-link">Basics</a>
             
               
               <ul class="navigation-list-child-list ">
@@ -65,7 +65,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/basics/icons.html" class="navigation-list-link">Icons</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/icons.html" class="navigation-list-link">Icons</a>
                       
                     </li>
                   
@@ -75,7 +75,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/basics/colours.html" class="navigation-list-link">Colours</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/colours.html" class="navigation-list-link">Colours</a>
                       
                     </li>
                   
@@ -83,7 +83,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/basics/layouts.html" class="navigation-list-link">Layout</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/layouts.html" class="navigation-list-link">Layout</a>
                       
                     </li>
                   
@@ -91,7 +91,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/basics/typography.html" class="navigation-list-link">Typography</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/typography.html" class="navigation-list-link">Typography</a>
                       
                     </li>
                   
@@ -144,7 +144,7 @@
         
           <li class="navigation-list-item active">
             
-            <a href="http://localhost:4000/docs/components" class="navigation-list-link">Components</a>
+            <a href="https://nfb-onf.github.io/balmoral-style/docs/components" class="navigation-list-link">Components</a>
             
               
               <ul class="navigation-list-child-list ">
@@ -168,7 +168,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/components/forms.html" class="navigation-list-link">Forms</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/forms.html" class="navigation-list-link">Forms</a>
                       
                     </li>
                   
@@ -176,7 +176,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/components/heros.html" class="navigation-list-link">Heros</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/heros.html" class="navigation-list-link">Heros</a>
                       
                     </li>
                   
@@ -184,7 +184,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/components/callouts.html" class="navigation-list-link">Callout</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/callouts.html" class="navigation-list-link">Callout</a>
                       
                     </li>
                   
@@ -192,7 +192,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/components/buttons.html" class="navigation-list-link">Buttons</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/buttons.html" class="navigation-list-link">Buttons</a>
                       
                     </li>
                   
@@ -200,7 +200,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/components/player.html" class="navigation-list-link">Video Player</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/player.html" class="navigation-list-link">Video Player</a>
                       
                     </li>
                   
@@ -208,7 +208,7 @@
                   
                     <li class="navigation-list-item  active">
                       
-                      <a href="http://localhost:4000/docs/components/search.html" class="navigation-list-link active">Search & Filters</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/search.html" class="navigation-list-link active">Search & Filters</a>
                       
                     </li>
                   
@@ -216,7 +216,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/components/cards.html" class="navigation-list-link">Cards & vignettes</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/cards.html" class="navigation-list-link">Cards & vignettes</a>
                       
                     </li>
                   
@@ -224,7 +224,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/components/messages.html" class="navigation-list-link">Alerts & Messages</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/messages.html" class="navigation-list-link">Alerts & Messages</a>
                       
                     </li>
                   
@@ -232,7 +232,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/components/navigation.html" class="navigation-list-link">Navigation</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/navigation.html" class="navigation-list-link">Navigation</a>
                       
                     </li>
                   
@@ -289,7 +289,7 @@
         
           <li class="navigation-list-item">
             
-            <a href="http://localhost:4000/docs/templates" class="navigation-list-link">Templates</a>
+            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link">Templates</a>
             
               
               <ul class="navigation-list-child-list ">
@@ -344,7 +344,7 @@
         
           <li class="navigation-list-item">
             
-            <a href="http://localhost:4000/docs/utilities" class="navigation-list-link">Utilities</a>
+            <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities" class="navigation-list-link">Utilities</a>
             
               
               <ul class="navigation-list-child-list ">
@@ -390,7 +390,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="http://localhost:4000/docs/utilities/colour-switcher.html" class="navigation-list-link">Colour Switcher</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities/colour-switcher.html" class="navigation-list-link">Colour Switcher</a>
                       
                     </li>
                   
@@ -440,7 +440,7 @@
             <nav class="breadcrumb-nav">
               <ol class="breadcrumb-nav-list">
                 
-                  <li class="breadcrumb-nav-list-item"><a href="http://localhost:4000/docs/components">Components</a></li>
+                  <li class="breadcrumb-nav-list-item"><a href="https://nfb-onf.github.io/balmoral-style/docs/components">Components</a></li>
                 
                 <li class="breadcrumb-nav-list-item"><span>Search & Filters</span></li>
               </ol>
