add link to templtes

--- a/assets/css/just-the-docs.css
+++ b/assets/css/just-the-docs.css
@@ -20266,6 +20266,9 @@ code {
 .fg-orange-30 {
   color: #C24421; }
 
+.bg-blueInfo {
+  background-color: #5bc0de; }
+
 .bg-rougeDanger {
   background-color: #E03C31; }
 
