--- a/docs/components/search.html
+++ b/docs/components/search.html
@@ -458,7 +458,11 @@
 
 <h2 id="search">Search</h2>
 
+<p>coming soon</p>
+
 <h2 id="filter-bar">Filter bar</h2>
+
+<p class="label label-blue"><a href="https://www.nfb.ca/explore-all-films/">live example</a></p>
 
 <div class="balmoral-demo code-example">
 
