packaging for AB

--- a/docs/components/cards.html
+++ b/docs/components/cards.html
@@ -91,6 +91,14 @@
                   
                     <li class="navigation-list-item ">
                       
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/primer.html" class="navigation-list-link">Style definition</a>
+                      
+                    </li>
+                  
+                
+                  
+                    <li class="navigation-list-item ">
+                      
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/typography.html" class="navigation-list-link">Typography</a>
                       
                     </li>
@@ -142,6 +150,10 @@
     
       
         
+      
+    
+      
+        
           <li class="navigation-list-item active">
             
             <a href="https://nfb-onf.github.io/balmoral-style/docs/components" class="navigation-list-link">Components</a>
@@ -165,12 +177,6 @@
                 
                   
                 
-                  
-                    <li class="navigation-list-item ">
-                      
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/forms.html" class="navigation-list-link">Forms</a>
-                      
-                    </li>
                   
                 
                   
@@ -198,9 +204,9 @@
                   
                 
                   
-                    <li class="navigation-list-item ">
+                    <li class="navigation-list-item  active">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/player.html" class="navigation-list-link">Video Player</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/cards.html" class="navigation-list-link active">Cards & vignettes</a>
                       
                     </li>
                   
@@ -214,9 +220,9 @@
                   
                 
                   
-                    <li class="navigation-list-item  active">
+                    <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/cards.html" class="navigation-list-link active">Cards & vignettes</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/forms.html" class="navigation-list-link">Forms</a>
                       
                     </li>
                   
@@ -233,6 +239,14 @@
                     <li class="navigation-list-item ">
                       
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/components/navigation.html" class="navigation-list-link">Navigation</a>
+                      
+                    </li>
+                  
+                
+                  
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/player.html" class="navigation-list-link">Video Player</a>
                       
                     </li>
                   
@@ -334,9 +348,15 @@
                 
                   
                 
+                  
+                
               </ul>
             
           </li>
+        
+      
+    
+      
         
       
     
@@ -395,13 +415,11 @@
                     </li>
                   
                 
+                  
+                
               </ul>
             
           </li>
-        
-      
-    
-      
         
       
     
@@ -450,6 +468,7 @@
         <div class="page-content">
           <h1 class="no_toc" id="cards--vignettes">Cards &amp; vignettes</h1>
 <p class="label label-yellow">WIP</p>
+<p>Please see <a href="https://www.nfb.ca/styleguide/vignette/">working versions on nfb.ca</a> (authorization requierd)</p>
 
 <ol id="markdown-toc">
   <li><a href="#vignettes" id="markdown-toc-vignettes">Vignettes</a>    <ol>
