--- a/docs/components/messages.html
+++ b/docs/components/messages.html
@@ -91,6 +91,14 @@
                   
                     <li class="navigation-list-item ">
                       
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/primer.html" class="navigation-list-link">Style definition</a>
+                      
+                    </li>
+                  
+                
+                  
+                    <li class="navigation-list-item ">
+                      
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/typography.html" class="navigation-list-link">Typography</a>
                       
                     </li>
@@ -142,6 +150,10 @@
     
       
         
+      
+    
+      
+        
           <li class="navigation-list-item active">
             
             <a href="https://nfb-onf.github.io/balmoral-style/docs/components" class="navigation-list-link">Components</a>
@@ -165,12 +177,6 @@
                 
                   
                 
-                  
-                    <li class="navigation-list-item ">
-                      
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/forms.html" class="navigation-list-link">Forms</a>
-                      
-                    </li>
                   
                 
                   
@@ -200,7 +206,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/player.html" class="navigation-list-link">Video Player</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/cards.html" class="navigation-list-link">Cards & vignettes</a>
                       
                     </li>
                   
@@ -216,7 +222,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/cards.html" class="navigation-list-link">Cards & vignettes</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/forms.html" class="navigation-list-link">Forms</a>
                       
                     </li>
                   
@@ -233,6 +239,14 @@
                     <li class="navigation-list-item ">
                       
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/components/navigation.html" class="navigation-list-link">Navigation</a>
+                      
+                    </li>
+                  
+                
+                  
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/player.html" class="navigation-list-link">Video Player</a>
                       
                     </li>
                   
@@ -334,9 +348,15 @@
                 
                   
                 
+                  
+                
               </ul>
             
           </li>
+        
+      
+    
+      
         
       
     
@@ -395,13 +415,11 @@
                     </li>
                   
                 
+                  
+                
               </ul>
             
           </li>
-        
-      
-    
-      
         
       
     
@@ -455,9 +473,9 @@
   <li><a href="#message-with-choices" id="markdown-toc-message-with-choices">Message with choices</a></li>
 </ol>
 
-<p>Les bandeaux d’alerte s’affiche dans le haut d’une page. Il suffit d’insérer le code suivant dans la zone éditable de template <code class="highlighter-rouge">&lt;%block name="ribbon"&gt;&lt;/%block&gt;</code>. Le bouton x utilise l’utilitaire de <a href="/docs/utilities#showhide">masquage d’élément html</a>.</p>
+<p>Message banners are displayed at the top of a page. Just insert the following code in a  <code class="highlighter-rouge">&lt;% block name = "ribbon"&gt; &lt;/% block&gt;</code> of the template. The x button uses the <a href="../utilities#showhide">html element hiding</a> utility.</p>
 
-<p>Message banners are displayed at the top of a page. Just insert the following code in a  <code class="highlighter-rouge">&lt;% block name = "ribbon"&gt; &lt;/% block&gt;</code> of the template. The x button uses the <a href="/docs/utilities#showhide">html element hiding</a> utility.</p>
+<p>Les bandeaux d’alerte s’affiche dans le haut d’une page. Il suffit d’insérer le code suivant dans la zone éditable de template <code class="highlighter-rouge">&lt;%block name="ribbon"&gt;&lt;/%block&gt;</code>. Le bouton x utilise l’utilitaire de <a href="../utilities#showhide">masquage d’élément html</a>.</p>
 
 <div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"l-bigContainer m-ribbon"</span> <span class="na">id=</span><span class="s">"alerte"</span><span class="nt">&gt;</span>
  <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"l-contentContainer"</span><span class="nt">&gt;</span>
