--- a/docs/components/search.html
+++ b/docs/components/search.html
@@ -91,6 +91,14 @@
                   
                     <li class="navigation-list-item ">
                       
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/primer.html" class="navigation-list-link">Style definition</a>
+                      
+                    </li>
+                  
+                
+                  
+                    <li class="navigation-list-item ">
+                      
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/typography.html" class="navigation-list-link">Typography</a>
                       
                     </li>
@@ -142,6 +150,10 @@
     
       
         
+      
+    
+      
+        
           <li class="navigation-list-item active">
             
             <a href="https://nfb-onf.github.io/balmoral-style/docs/components" class="navigation-list-link">Components</a>
@@ -165,12 +177,6 @@
                 
                   
                 
-                  
-                    <li class="navigation-list-item ">
-                      
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/forms.html" class="navigation-list-link">Forms</a>
-                      
-                    </li>
                   
                 
                   
@@ -200,7 +206,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/player.html" class="navigation-list-link">Video Player</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/cards.html" class="navigation-list-link">Cards & vignettes</a>
                       
                     </li>
                   
@@ -216,7 +222,7 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/cards.html" class="navigation-list-link">Cards & vignettes</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/forms.html" class="navigation-list-link">Forms</a>
                       
                     </li>
                   
@@ -233,6 +239,14 @@
                     <li class="navigation-list-item ">
                       
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/components/navigation.html" class="navigation-list-link">Navigation</a>
+                      
+                    </li>
+                  
+                
+                  
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/player.html" class="navigation-list-link">Video Player</a>
                       
                     </li>
                   
@@ -334,9 +348,15 @@
                 
                   
                 
+                  
+                
               </ul>
             
           </li>
+        
+      
+    
+      
         
       
     
@@ -395,13 +415,11 @@
                     </li>
                   
                 
+                  
+                
               </ul>
             
           </li>
-        
-      
-    
-      
         
       
     
@@ -462,7 +480,7 @@
 
 <h2 id="filter-bar">Filter bar</h2>
 
-<p class="label label-blue"><a href="https://www.nfb.ca/explore-all-films/">live example</a></p>
+<p><a href="https://www.nfb.ca/explore-all-films/">live example</a></p>
 
 <div class="balmoral-demo code-example">
 
