--- a/docs/components/forms.html
+++ b/docs/components/forms.html
@@ -29,7 +29,7 @@
         
           <li class="navigation-list-item active">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/" class="navigation-list-link"></a>
+            <a href="https://nfb-onf.github.io/balmoral-style/404.html" class="navigation-list-link"></a>
             
           </li>
         
@@ -39,9 +39,13 @@
         
           <li class="navigation-list-item active">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/404.html" class="navigation-list-link"></a>
+            <a href="https://nfb-onf.github.io/balmoral-style/" class="navigation-list-link"></a>
             
           </li>
+        
+      
+    
+      
         
       
     
@@ -63,35 +67,21 @@
                   
                 
                   
-                    <li class="navigation-list-item ">
-                      
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/icons.html" class="navigation-list-link">Icons</a>
-                      
-                    </li>
-                  
-                
-                  
                 
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/colours.html" class="navigation-list-link">Colours</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/primer.html" class="navigation-list-link">Style definition</a>
                       
                     </li>
+                  
+                
                   
                 
                   
                     <li class="navigation-list-item ">
                       
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/layouts.html" class="navigation-list-link">Layout</a>
-                      
-                    </li>
-                  
-                
-                  
-                    <li class="navigation-list-item ">
-                      
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/primer.html" class="navigation-list-link">Style definition</a>
                       
                     </li>
                   
@@ -107,7 +97,23 @@
                   
                 
                   
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/colours.html" class="navigation-list-link">Colours</a>
+                      
+                    </li>
+                  
                 
+                  
+                
+                  
+                
+                  
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/icons.html" class="navigation-list-link">Icons</a>
+                      
+                    </li>
                   
                 
                   
@@ -133,6 +139,10 @@
               </ul>
             
           </li>
+        
+      
+    
+      
         
       
     
@@ -166,33 +176,19 @@
                   
                 
                   
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
-                
-                  
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/heros.html" class="navigation-list-link">Heros</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/messages.html" class="navigation-list-link">Alerts & Messages</a>
                       
                     </li>
                   
                 
                   
-                    <li class="navigation-list-item ">
-                      
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/callouts.html" class="navigation-list-link">Callout</a>
-                      
-                    </li>
+                
+                  
+                
+                  
+                
                   
                 
                   
@@ -204,17 +200,25 @@
                   
                 
                   
+                
+                  
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/cards.html" class="navigation-list-link">Cards & vignettes</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/callouts.html" class="navigation-list-link">Callout</a>
                       
                     </li>
                   
                 
                   
+                
+                  
+                
+                  
+                
+                  
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/search.html" class="navigation-list-link">Search & Filters</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/cards.html" class="navigation-list-link">Cards & vignettes</a>
                       
                     </li>
                   
@@ -228,9 +232,13 @@
                   
                 
                   
+                
+                  
+                
+                  
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/messages.html" class="navigation-list-link">Alerts & Messages</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/heros.html" class="navigation-list-link">Heros</a>
                       
                     </li>
                   
@@ -252,46 +260,24 @@
                   
                 
                   
-                
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/search.html" class="navigation-list-link">Search & Filters</a>
+                      
+                    </li>
                   
                 
+                  
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/modals.html" class="navigation-list-link">Modals and popups</a>
+                      
+                    </li>
                   
                 
               </ul>
             
           </li>
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
         
       
     
@@ -350,9 +336,15 @@
                 
                   
                 
+                  
+                
               </ul>
             
           </li>
+        
+      
+    
+      
         
       
     
@@ -402,12 +394,6 @@
                   
                 
                   
-                
-                  
-                
-                  
-                
-                  
                     <li class="navigation-list-item ">
                       
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities/colour-switcher.html" class="navigation-list-link">Colour Switcher</a>
@@ -417,9 +403,41 @@
                 
                   
                 
+                  
+                
+                  
+                
+                  
+                
+                  
+                
               </ul>
             
           </li>
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
         
       
     
