--- a/docs/components/modals.html
+++ b/docs/components/modals.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-  <title>Templates - NFB Balmoral</title>
+  <title>Modals and popups - NFB Balmoral</title>
   <link rel="stylesheet" href="https://nfb-onf.github.io/balmoral-style/assets/css/just-the-docs.css">
   
   <script type="text/javascript" src="https://nfb-onf.github.io/balmoral-style/assets/js/vendor/lunr.min.js"></script>
@@ -164,7 +164,7 @@
     
       
         
-          <li class="navigation-list-item">
+          <li class="navigation-list-item active">
             
             <a href="https://nfb-onf.github.io/balmoral-style/docs/components" class="navigation-list-link">Components</a>
             
@@ -268,9 +268,9 @@
                   
                 
                   
-                    <li class="navigation-list-item ">
+                    <li class="navigation-list-item  active">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/modals.html" class="navigation-list-link">Modals and popups</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/modals.html" class="navigation-list-link active">Modals and popups</a>
                       
                     </li>
                   
@@ -287,9 +287,9 @@
     
       
         
-          <li class="navigation-list-item active">
+          <li class="navigation-list-item">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link active">Templates</a>
+            <a href="https://nfb-onf.github.io/balmoral-style/docs/templates" class="navigation-list-link">Templates</a>
             
               
               <ul class="navigation-list-child-list ">
@@ -473,78 +473,91 @@
       <div class="main-content">
         
           
+            <nav class="breadcrumb-nav">
+              <ol class="breadcrumb-nav-list">
+                
+                  <li class="breadcrumb-nav-list-item"><a href="https://nfb-onf.github.io/balmoral-style/docs/components">Components</a></li>
+                
+                <li class="breadcrumb-nav-list-item"><span>Modals and popups</span></li>
+              </ol>
+            </nav>
+          
         
         <div class="page-content">
-          <h1 class="no_toc" id="templates">Templates</h1>
+          <h1 class="no_toc" id="modals-and-popups">Modals and Popups</h1>
+<p class="label label-yellow">WIP</p>
 
 <ol id="markdown-toc">
-  <li><a href="#nfb-balmoral-ui-kit" id="markdown-toc-nfb-balmoral-ui-kit">NFB Balmoral UI kit</a></li>
+  <li><a href="#modals" id="markdown-toc-modals">Modals</a></li>
+  <li><a href="#tooltips" id="markdown-toc-tooltips">Tooltips</a></li>
+  <li><a href="#pop-over" id="markdown-toc-pop-over">Pop over</a></li>
 </ol>
 
-<h2 id="nfb-balmoral-ui-kit">NFB Balmoral UI kit</h2>
+<p class="label label-red">broken</p>
 
-<p>Adobe XD <a href="https://xd.adobe.com/view/9e5f79ee-9357-427f-4e5d-bf093ed80633-e86e/">preview:</a> pass: NFBbalmoral2019</p>
+<p>Please see <a href="https://www.nfb.ca/styleguide/utilitaires/">working versions on nfb.ca</a> (authorization requierd)</p>
 
-<p>Adobe XD <a href="https://xd.adobe.com/spec/21df668c-7b06-49c9-485f-e1873e231ee4-57ee/">preview - dev:</a> pass: NFBbalmoral2019</p>
+<h2 id="modals">Modals</h2>
+
+<div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nt">&lt;div</span> <span class="na">id=</span><span class="s">"loginModal"</span> <span class="na">class=</span><span class="s">"m-modal"</span><span class="nt">&gt;</span>
+  <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"m-popup"</span><span class="nt">&gt;</span>
+    <span class="nt">&lt;header&gt;</span>
+      <span class="nt">&lt;h4&gt;</span>Pop-up<span class="nt">&lt;/h4&gt;</span>
+      <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">""</span> <span class="na">class=</span><span class="s">"x-icon-link"</span> <span class="na">data-closeModal=</span><span class="s">"true"</span><span class="nt">&gt;</span>
+        (x)
+      <span class="nt">&lt;/a&gt;</span>
+    <span class="nt">&lt;/header&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"embed-player-container"</span><span class="nt">&gt;</span>
+      <span class="nt">&lt;iframe</span> <span class="na">src=</span><span class="s">"/film/dehors_novembre/embed/player/"</span> <span class="na">width=</span><span class="s">"560"</span> <span class="na">height=</span><span class="s">"315"</span> <span class="na">frameborder=</span><span class="s">"0"</span><span class="nt">&gt;&lt;/iframe&gt;</span>
+    <span class="nt">&lt;/div&gt;</span>
+  <span class="nt">&lt;/div&gt;</span>
+<span class="nt">&lt;/div&gt;</span>
+</code></pre></div></div>
+
+<div class="balmoral-demo code-example">
+<a href="#loginModal" class="btn btn-primary" data-modal="true">Ouvrir le pop-up</a>
+
+<div id="loginModal" class="m-modal">
+   <div class="m-popup">
+     <header>
+       <h4>Pop-up</h4>
+       <a href="" class="x-icon-link" data-closemodal="true">
+         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 29 29" enable-background="new 0 0 29 29" xml:space="preserve" class="x-icon">
+<path d="M14.5 0C6.5 0 0 6.5 0 14.5C0 22.5 6.5 29 14.5 29S29 22.5 29 14.5C29 6.5 22.5 0 14.5 0z M22.4 20.2c0.6 0.6 0.6 1.5 0 2.1 s-1.5 0.6-2.1 0l-5.7-5.7l-5.7 5.7c-0.3 0.3-0.7 0.4-1.1 0.4s-0.8-0.1-1.1-0.4c-0.6-0.6-0.6-1.5 0-2.1l5.7-5.7L6.6 8.8 C6.3 8.5 6.2 8.1 6.2 7.7s0.1-0.8 0.4-1.1c0.6-0.6 1.5-0.6 2.1 0l5.7 5.7l5.7-5.7c0.6-0.6 1.5-0.6 2.1 0s0.6 1.5 0 2.1l-5.7 5.7 L22.4 20.2z" />
+</svg>
+       </a>
+     </header>
+     <div class="embed-player-container">
+       <iframe src="https://www.onf.ca/film/dehors_novembre/embed/player/" width="560" height="315" frameborder="0"></iframe>
+     </div>
+   </div>
+ </div>
+</div>
+
+<h2 id="tooltips">Tooltips</h2>
+
+<p>Il faut ajouter la classe <code class="highlighter-rouge">is-greyTooltip</code> sur le lien et entrer le texte qui sera afficher dans la bulle dans l’attribut <code class="highlighter-rouge">data-original-title</code>.</p>
+
+<p>Il s’agit des <a href="https://getbootstrap.com/docs/3.4/javascript/#tooltips">tooltip bootstrap</a> stylisé.</p>
+
+<div class="balmoral-demo code-example">
+<a href="javascript:void(0);" class="is-greyTooltip" data-original-title="Infos supplémentaires">Tooltip gris</a>
+</div>
+
+<div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"javascript:void(0);"</span> <span class="na">class=</span><span class="s">"is-greyTooltip"</span>  <span class="na">data-original-title=</span><span class="s">'Infos supplémentaires'</span><span class="nt">&gt;</span>Tooltip gris<span class="nt">&lt;/a&gt;</span>
+</code></pre></div></div>
+
+<h2 id="pop-over">Pop over</h2>
+
+<p>Il s’agit des <a href="https://getbootstrap.com/docs/3.4/javascript/#popovers">popOver de bootstrap</a> stylisé. Le container et le trigger peuvent être passé via les attributs <code class="highlighter-rouge">data-container</code> et <code class="highlighter-rouge">data-trigger</code>.</p>
+
+<div class="balmoral-demo code-example">
+<span class="is-popoverLink helpInfos" data-placement="auto" data-toggle="popover" title="Titre" data-content="&lt;small&gt;Contenu&lt;/small&gt;">?</span>
+</div>
+<div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"is-popoverLink helpInfos"</span> <span class="na">data-placement=</span><span class="s">"auto"</span> <span class="na">data-toggle=</span><span class="s">"popover"</span>  <span class="na">title=</span><span class="s">"Titre"</span> <span class="na">data-content=</span><span class="s">"&lt;small&gt;Contenu&lt;/small&gt;"</span><span class="nt">&gt;</span>?<span class="nt">&lt;/span&gt;</span>
+</code></pre></div></div>
 
 
-          
-          <hr>
-          <h2 class="text-delta">Table of contents</h2>
-          
-          <ul>
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-              
-            
-          </ul>
           
         </div>
       </div>
