--- a/docs/components/callouts.html
+++ b/docs/components/callouts.html
@@ -29,7 +29,7 @@
         
           <li class="navigation-list-item active">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/" class="navigation-list-link"></a>
+            <a href="https://nfb-onf.github.io/balmoral-style/404.html" class="navigation-list-link"></a>
             
           </li>
         
@@ -39,9 +39,13 @@
         
           <li class="navigation-list-item active">
             
-            <a href="https://nfb-onf.github.io/balmoral-style/404.html" class="navigation-list-link"></a>
+            <a href="https://nfb-onf.github.io/balmoral-style/" class="navigation-list-link"></a>
             
           </li>
+        
+      
+    
+      
         
       
     
@@ -63,35 +67,21 @@
                   
                 
                   
-                    <li class="navigation-list-item ">
-                      
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/icons.html" class="navigation-list-link">Icons</a>
-                      
-                    </li>
-                  
-                
-                  
                 
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/colours.html" class="navigation-list-link">Colours</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/primer.html" class="navigation-list-link">Style definition</a>
                       
                     </li>
+                  
+                
                   
                 
                   
                     <li class="navigation-list-item ">
                       
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/layouts.html" class="navigation-list-link">Layout</a>
-                      
-                    </li>
-                  
-                
-                  
-                    <li class="navigation-list-item ">
-                      
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/primer.html" class="navigation-list-link">Style definition</a>
                       
                     </li>
                   
@@ -107,7 +97,23 @@
                   
                 
                   
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/colours.html" class="navigation-list-link">Colours</a>
+                      
+                    </li>
+                  
                 
+                  
+                
+                  
+                
+                  
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/basics/icons.html" class="navigation-list-link">Icons</a>
+                      
+                    </li>
                   
                 
                   
@@ -133,6 +139,10 @@
               </ul>
             
           </li>
+        
+      
+    
+      
         
       
     
@@ -166,9 +176,11 @@
                   
                 
                   
-                
-                  
-                
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/messages.html" class="navigation-list-link">Alerts & Messages</a>
+                      
+                    </li>
                   
                 
                   
@@ -182,9 +194,11 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/heros.html" class="navigation-list-link">Heros</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/buttons.html" class="navigation-list-link">Buttons</a>
                       
                     </li>
+                  
+                
                   
                 
                   
@@ -196,11 +210,9 @@
                   
                 
                   
-                    <li class="navigation-list-item ">
-                      
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/buttons.html" class="navigation-list-link">Buttons</a>
-                      
-                    </li>
+                
+                  
+                
                   
                 
                   
@@ -214,23 +226,19 @@
                   
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/search.html" class="navigation-list-link">Search & Filters</a>
-                      
-                    </li>
-                  
-                
-                  
-                    <li class="navigation-list-item ">
-                      
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/components/forms.html" class="navigation-list-link">Forms</a>
                       
                     </li>
                   
                 
                   
+                
+                  
+                
+                  
                     <li class="navigation-list-item ">
                       
-                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/messages.html" class="navigation-list-link">Alerts & Messages</a>
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/heros.html" class="navigation-list-link">Heros</a>
                       
                     </li>
                   
@@ -252,46 +260,24 @@
                   
                 
                   
-                
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/search.html" class="navigation-list-link">Search & Filters</a>
+                      
+                    </li>
                   
                 
+                  
+                    <li class="navigation-list-item ">
+                      
+                      <a href="https://nfb-onf.github.io/balmoral-style/docs/components/modals.html" class="navigation-list-link">Modals and popups</a>
+                      
+                    </li>
                   
                 
               </ul>
             
           </li>
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
-        
-      
-    
-      
         
       
     
@@ -350,9 +336,15 @@
                 
                   
                 
+                  
+                
               </ul>
             
           </li>
+        
+      
+    
+      
         
       
     
@@ -402,12 +394,6 @@
                   
                 
                   
-                
-                  
-                
-                  
-                
-                  
                     <li class="navigation-list-item ">
                       
                       <a href="https://nfb-onf.github.io/balmoral-style/docs/utilities/colour-switcher.html" class="navigation-list-link">Colour Switcher</a>
@@ -417,9 +403,41 @@
                 
                   
                 
+                  
+                
+                  
+                
+                  
+                
+                  
+                
               </ul>
             
           </li>
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
+        
+      
+    
+      
         
       
     
@@ -476,17 +494,18 @@
 Couleur de background: light grey (default)  <code class="highlighter-rouge">.beige</code>, <code class="highlighter-rouge">.gris</code> &amp;  <code class="highlighter-rouge">.blanc</code>.</p>
 
 <div class="balmoral-demo code-example">
-<div class="m-callout small beige ">
+<div class="m-callout small beige">
 			<h5>2018 School Year - Province of Québec</h5>
 			<p>If the institution you work in is part of a public school board in the province of Québec, you probably have access to a subscription to CAMPUS.</p>
 			<p><a href="#">Check here</a></p>
-		</div>
+</div>
 </div>
 
 <div class="language-html highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"m-callout small beige"</span><span class="nt">&gt;</span>
  [...]
 <span class="nt">&lt;/div&gt;</span>  
 </code></pre></div></div>
+<p>end</p>
 
 
           
