--- a/docs/components/navigation.html
+++ b/docs/components/navigation.html
@@ -489,9 +489,10 @@
 <ol id="markdown-toc">
   <li><a href="#side-navigation" id="markdown-toc-side-navigation">Side Navigation</a></li>
   <li><a href="#horizontal-navigation" id="markdown-toc-horizontal-navigation">Horizontal Navigation</a></li>
+  <li><a href="#breadcrumbs" id="markdown-toc-breadcrumbs">Breadcrumbs</a></li>
   <li><a href="#tabs" id="markdown-toc-tabs">Tabs</a></li>
   <li><a href="#pagination" id="markdown-toc-pagination">Pagination</a>    <ol>
-      <li><a href="#default-pagination" id="markdown-toc-default-pagination">Default pagination</a></li>
+      <li><a href="#page-selector" id="markdown-toc-page-selector">Page selector</a></li>
       <li><a href="#simple-pager" id="markdown-toc-simple-pager">Simple pager</a></li>
       <li><a href="#alphabetical-list" id="markdown-toc-alphabetical-list">Alphabetical list</a></li>
     </ol>
@@ -501,11 +502,11 @@
 <h2 id="side-navigation">Side Navigation</h2>
 <p class="label label-yellow">Coming soon</p>
 <h2 id="horizontal-navigation">Horizontal Navigation</h2>
-<p class="label label-yellow">WIP</p>
+<p class="label label-yellow">WIP: Style conflicts</p>
 
 <p>Horizontal nav is to be placed at the top of the page. On mobile, the navigation bar collapse into a hamberger menu</p>
 
-<div class="balmoral-demo m-navbar-section">
+<div class="balmoral-demo m-navbar-section code-example">
 <div class="m-navbar-section">
 <div id="navbar" class="navbar-collapse collapse">
   <ul class="nav navbar-nav">
@@ -517,9 +518,63 @@
 </div>
 </div>
 
-<h2 id="tabs">Tabs</h2>
+<h2 id="breadcrumbs">Breadcrumbs</h2>
+<p class="label label-yellow">WIP: Style conflicts</p>
+<p class="label label-red">NEED REFACT: Not semantic</p>
 
-<div class="balmoral-demo">
+<p><strong>Level 1</strong></p>
+<div class="balmoral-demo code-example">
+<div class="m-breadcrumb-bar">
+    <ol>
+        <li style="height: 71px;"><h1><a href="/subjects/">Subjects <span class="result-count">(65)</span></a></h1> </li>
+    </ol>
+</div>
+</div>
+
+<p><strong>Level 2</strong></p>
+<div class="balmoral-demo code-example">
+<div class="m-breadcrumb-bar">
+    <ol>
+        <li style="height: 71px;"><h2><a href="/subjects/">Subjects <span class="result-count">(65)</span></a></h2> </li>
+        <li style="height: 71px;">
+            <h1>Arts <span class="result-count">(5)</span></h1>
+        </li>
+    </ol>
+</div>
+</div>
+
+<p><strong>Level 3</strong></p>
+<div class="balmoral-demo code-example">
+<div class="m-breadcrumb-bar">
+  <ol>
+    <li style="height: 71px;"><h3><a href="/subjects/">Subjects</a> <span class="result-count">(65)</span></h3> </li>
+    <li style="height: 71px;"><h2><a href="/subjects/arts">Arts</a> <span class="result-count">(5)</span></h2> </li>
+  </ol>
+</div>
+<h1 class="h2">Arts and Artists <span class="result-count">(10)</span></h1>
+</div>
+
+<p><strong>Alternate use</strong></p>
+<div class="balmoral-demo code-example">
+<div class="m-breadcrumb-bar">
+<ol>
+  <li style="height: 71px;"><h2><a href="#">Playlists</a></h2></li>
+  <li style="height: 71px;">
+    <div class="withPhoto">
+      <span class="mask-circle img-circle">
+        <img src="https://media1.nfb.ca/medias/nfb_tube/curator_images/2016/albert-ohayon_SM.jpg" class="img-rectangle" alt="Albert Ohayon" />
+      </span>
+      <h1>Albert Ohayon</h1>
+    </div>
+  </li>
+</ol>
+</div>
+</div>
+
+<h2 id="tabs">Tabs</h2>
+<p class="label label-yellow">WIP: Style conflicts</p>
+
+<div class="balmoral-demo code-example">
 <div class="m-tabs">
   <ul>
     <li class="active"><a href="#tab1">Tab 1</a></li>
@@ -550,7 +605,7 @@
 
 <h2 id="pagination">Pagination</h2>
 
-<h3 id="default-pagination">Default pagination</h3>
+<h3 id="page-selector">Page selector</h3>
 
 <p class="fs3 label label-blue"><em>todo: replace double bracket by icons, normalize colour (grey)</em></p>
 
